--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.3.2
-numpy==1.24.1
-pandas==2.1.0
-scikit-learn==1.3.2
+Flask==2.2.3
+gunicorn==20.1.0
+numpy==1.24.0
+pandas==1.5.2
+scikit-learn==1.2.0
